--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,11 +1,42 @@
-@article{DBLP:journals/corr/Diaz-CaroL15,
-	author       = {Alejandro Díaz{-}Caro and Pablo E. Martínez López},
-	title        = {Isomorphisms considered as equalities: Projecting functions and enhancing partial application through and implementation of lambda+},
+
+@InProceedings{system-i,
+	author = "D{\'\i}az-Caro, Alejandro and Dowek, Gilles",
+	title = "Proof Normalisation in a Logic Identifying Isomorphic Propositions",
+	booktitle = "4th International Conference on Formal Structures for Computation and Deduction (FSCD 2019)",
+	year = "2019",
+	pages = "14:1--14:23",
+	series = "Leibniz International Proceedings in Informatics (LIPIcs)",
+	volume = "131",
+	editor = "Herman Geuvers",
+	publisher = "Schloss Dagstuhl--Leibniz-Zentrum fuer Informatik"
+}
+@article{lambda-plus,
+	author       = {Alejandro D{\'{\i}}az{-}Caro and
+	Pablo E. Mart{\'{\i}}nez L{\'{o}}pez},
+	title        = {Isomorphisms considered as equalities: Projecting functions and enhancing
+	partial application through and implementation of lambda+},
 	journal      = {CoRR},
 	volume       = {abs/1511.09324},
-	year         = {2015}
+	year         = {2015},
+	url          = {http://arxiv.org/abs/1511.09324},
+	eprinttype    = {arXiv},
+	eprint       = {1511.09324},
+	timestamp    = {Mon, 13 Aug 2018 16:47:37 +0200},
+	biburl       = {https://dblp.org/rec/journals/corr/Diaz-CaroL15.bib},
+	bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
-@Book{plfa22.08,
+@article{MSCSSurvey05,
+	title = {A short survey of Isomorphisms of Types},
+	year = {2005},
+	dmi-category = {jour},
+	author = {Di Cosmo, Roberto},
+	x-topic = {typeis},
+	doi = {http://dx.doi.org/10.1017/S0960129505004871},
+	urllocal = {http://www.dicosmo.org/Articles/mscs-survey.pdf},
+	journal = {Mathematical Structures in Computer Science},
+	volume = 15,
+}
+@Book{plfa,
 	author = {Philip Wadler and Wen Kokke and Jeremy G. Siek},
 	title  = {Programming Language Foundations in {A}gda},
 	year   = {2022},
