--- a/paper/references.bib
+++ b/paper/references.bib
@@ -10,6 +10,14 @@
 	editor = "Herman Geuvers",
 	publisher = "Schloss Dagstuhl--Leibniz-Zentrum fuer Informatik"
 }
+@thesis{sip,
+	author = {Sottile, Cristian},
+	title = {Agregando polimorfismo a una lógica que identifica proposiciones isomorfas},
+	type = {Tesis},
+	institution = {Universidad Nacional de La Plata},
+	date = {2020-03-10},
+	url = {http://sedici.unlp.edu.ar/handle/10915/118544}
+}
 @article{lambda-plus,
 	author       = {Alejandro D{\'{\i}}az{-}Caro and
 	Pablo E. Mart{\'{\i}}nez L{\'{o}}pez},
@@ -42,4 +50,15 @@
 	year   = {2022},
 	month  = aug,
 	url    = {https://plfa.inf.ed.ac.uk/22.08/},
+}
+@article{explicit_subs,
+	title={Explicit substitutions},
+	volume={1},
+	DOI={10.1017/S0956796800000186},
+	number={4},
+	journal={Journal of Functional Programming},
+	publisher={Cambridge University Press},
+	author={Abadi, M. and Cardelli, L. and Curien, P.-L. and Lévy, J.-J.},
+	year={1991},
+	pages={375–416}
 }
