--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -375,8 +375,62 @@
 	Además, los términos tienen una única representación, es decir, no es necesario tener en cuenta las $\alpha$-equivalencias.
 	
 	
-	\section{Substituciones explicitas}
-	[Explicit Substitutions](http://pauillac.inria.fr/~levy/pubs/90popljfp.pdf)
+	\section{Substituciones explícitas}
+	Utilizando la representación de DeBruijn, las sustituciones son simplemente mapas de números naturales a términos, es decir que pueden interpretarse como una secuencia infinita de términos.
+	Por ejemplo:
+	\[ (0\; 1\; 3)\{0\mapsto a, 1\mapsto b, i+2\mapsto i\} \rightarrow a\; b\; 1 \]
+	
+	Si se quisiera definir la $\beta$ reducción utilizando esta notación, una primera definición sería:
+	
+	\[ (\lambda a)b \rightarrow_{\beta} a \{ 0 \mapsto b, i+1\mapsto i+1 \} \]
+	
+	El problema es que al eliminar un $\lambda$ todas las variables libres de $a$ quedaran desfasadas, por lo que se les debe restar uno:
+	
+	\[ (\lambda a)b \rightarrow_{\beta} a \{ 0 \mapsto b, i+1\mapsto i \} \]
+	
+	El siguiente problema surge al intentar empujar la substitución dentro de una abstracción, en dicho caso, se debe evitar reemplazar el índice 0 por $b$:
+	
+	\[ (\lambda c)\{ 0 \mapsto b, i+1\mapsto i \} = \lambda c \{ 0 \mapsto 0, 1 \mapsto b, i+2\mapsto i+1 \} \]
+	
+	Un último problema puede presentarse si $b$ tiene variables libres, para evitar que estas sean capturadas por el $\lambda$ de $c$ se les debe sumar uno:
+	\[ (\lambda c)\{ 0 \mapsto b, i+1\mapsto i \} = \lambda c \{ 0 \mapsto 0, 1 \mapsto b \{ i \mapsto i+1 \}, i+2\mapsto i+1 \} \]
+	
+	El siguiente ejemplo muestra la forma correcta de realizar una $\beta$ reducción:
+	
+	\[
+	(\textcolor{red}{\lambda}\; \lambda\; 3\; \textcolor{red}{1}\; (\textcolor{green}{\lambda\; 0}\; \textcolor{red}{2}))\; (\textcolor{blue}{\lambda}\; 4\; \textcolor{blue}{0})
+	\rightarrow_\beta
+	\lambda \; 2\; (\textcolor{blue}{\lambda}\; 5\; \textcolor{blue}{0})\; (\textcolor{green}{\lambda\; 0}\; (\textcolor{blue}{\lambda}\; 6\; \textcolor{blue}{0}))\;
+	\]
+	
+	Notar como las variables libres del cuerpo de la abstracción se disminuyen en uno, las variables libres del argumento aumentan en uno por cada $\lambda$ que atraviesan, y las variables ligadas quedan intactas.
+	
+	
+	En \cite{explicit_subs} se presenta el álgebra $\sigma$ y los cuatro operadores que permiten construir estas secuencias.
+
+	\begin{itemize}
+		\item $id$ es la substitución identidad $\{i \mapsto i\}$.
+		\item $\uparrow$ es el operador shift, y suma uno a cada índice $\{i \mapsto i+1\}$.
+		\item $a \cdot s$ es la concatenación del término $a$ a la substitución $s$, $\{0 \mapsto a, i+1 \mapsto s(i)\}$. Por ejemplo $a \cdot s = \{ 0 \mapsto a, 1 \mapsto 0, 2 \mapsto 1, 3 \mapsto 2, \dots \} $
+		\item $s \circ t$ corresponde a la composición de substituciones, donde primero se aplica $s$ y luego $t$.
+	\end{itemize}
+	
+	Dada una substitución $s$, se escribe $a[s]$ para denotar la aplicación de la substitución sobre el término $a$.
+	\begin{align*}
+		n[s] &= s(n) \\
+		(a\; b)[s] &= a[s]\; b[s] \\
+		(\lambda a)[s] &= \lambda a[1 \cdot (s \; \circ \uparrow)]
+	\end{align*}
+	
+	Finalmente, la $\beta$ reducción se define como:
+	\[ (\lambda a)b \rightarrow_{\beta} a[b \cdot id] \]
+	
+	El trabajo Abadi también presenta algunas propiedades algebraicas de los operadores:
+	\begin{align*}
+		0\; \cdot \uparrow &= id \\
+		\uparrow \circ\; (a \cdot s) &= s \\
+		0[s]\; \cdot (\uparrow \circ\; s) &= s \\
+	\end{align*}
 	
 	
 	\chapter{Aportes}
