--- a/paper/references.bib
+++ b/paper/references.bib
@@ -62,3 +62,13 @@
 	year={1991},
 	pages={375–416}
 }
+@article{pas,
+	author = {Wadler, Philip},
+	year = {2015},
+	month = {11},
+	pages = {75-84},
+	title = {Propositions as types},
+	volume = {58},
+	journal = {Communications of the ACM},
+	doi = {10.1145/2699407}
+}
